# kalaturg

./: .clangd  .gitattributes  .gitignore  Makefile  README.md  STEPS.md  Top-cxxrtl.sv  Top-ice40.sv  Top.pcf  Top.sv  build.sbt  cxxsim.gtkw  flake.nix  kalaturg-ice40.pcf  prog  pyproject.toml  weave
.github/workflows/: cxxsim-tests.yml  dependency-graph.yml  scala.yml  synth-ice40.yml  synth-icebreaker.yml  unit-tests.yml
cxxsim/: CXXRTLTestbench.cc  CXXRTLTestbench.h  UART.cc  UART.h  bench.cc  bench.h  blackboxes.il  cxxrtl_testbench.cc  cxxrtl_testbench.h  cxxsim.gtkw  main.cc  main.h  simassert.cc  simassert.h  uart.cc  uart.h  uart.hh  utility.h
kalaturg/: __init__.py  __main__.py
kalaturg/rtl/: __init__.py  test_top.py  uart.py
src/main/scala/ee/hrzn/kivikakk/kalaturg/: PWM.scala  PlatUART.scala  Top.scala  UART.scala
src/main/scala/ee/hrzn/kivikakk/kalaturg/fifo/: FIFO.scala
src/main/scala/ee/hrzn/kivikakk/kalaturg/uart/: IO.scala  PinsIO.scala  PlatIO.scala  RX.scala  RXOut.scala  TX.scala  UART.scala
src/main/scala/ee/hrzn/kivikakk/sb/: CXXRTLTop.scala  ClockSpeed.scala  GenericTop.scala  HasIO.scala  ICE40Top.scala  Platform.scala  SB_GB.scala
src/main/scala/ee/kivikakk/kalaturg/: Blinker.scala  CXXRTLTestbench.scala  PWM.scala  Top.scala
src/main/scala/ee/kivikakk/kalaturg/uart/: PinsIO.scala  RX.scala  RXOut.scala  TX.scala  UART.scala
src/test/scala/ee/hrzn/kivikakk/kalaturg/: TopSpec.scala  UARTSpec.scala
src/test/scala/ee/kivikakk/kalaturg/uart/: RXSpec.scala  TXSpec.scala  UARTSpec.scala
(+3 files in other folders)
